--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,6 @@
 <resources>
-    <string name="app_name">GoogleMaps2018</string>
-
-
+    <string name="app_name">ChatMaps</string>
+    <string name="map_api_key">AIzaSyBus9xYNKFJ0Xyq8QYLRqLmlXMYRRS85a4</string>
     <!-- Strings related to login -->
     <string name="prompt_email">Email</string>
     <string name="prompt_password">Password (optional)</string>
@@ -48,6 +47,5 @@
     <string name="action_leave_chatroom">Leave chatroom</string>
     <string name="action_chatroom_user_list">User list</string>
     <string name="action_profile">Profile</string>
-
 
 </resources>
